--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,4 +1,4 @@
-timeout: '1200s'
+timeout: '1200'
 steps:
   - name: 'gcr.io/cloud-builders/docker'
     args: ['build', '-t', 'hackgt/$REPO_NAME:$COMMIT_SHA', '-t', 'hackgt/$REPO_NAME:latest',
