--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "remark-frontmatter": "^1.3.1",
     "remark-toc": "^5.1.1",
     "rimraf": "^3.0.2",
+    "sarcastic": "^1.5.0",
     "split": "^1.0.1",
     "stack-utils": "^2.0.2",
     "start-server-and-test": "^1.10.6",
