Add cookie secret and mongo session store

--- a/projects/cms/.env.example
+++ b/projects/cms/.env.example
@@ -2,3 +2,4 @@ GROUND_TRUTH_URL=
 GROUND_TRUTH_CLIENT_ID=
 GROUND_TRUTH_CLIENT_SECRET=
 MONGO_URL=
+COOKIE_SECRET= # Generate long, unguessable value. Can use openssl rand -hex 32
