--- a/projects/cms/package.json
+++ b/projects/cms/package.json
@@ -21,6 +21,7 @@
     "@keystonejs/fields-markdown": "^5.1.9",
     "@keystonejs/keystone": "^8.1.4",
     "@keystonejs/list-plugins": "^5.2.0",
+    "connect-mongo": "^3.2.0",
     "cross-env": "^7.0.0",
     "dotenv": "^8.2.0",
     "passport-oauth2": "^1.5.0",
