--- a/projects/cms/package.json
+++ b/projects/cms/package.json
@@ -15,6 +15,7 @@
     "@keystonejs/adapter-mongoose": "^8.0.0",
     "@keystonejs/app-admin-ui": "^5.12.0",
     "@keystonejs/app-graphql": "^5.1.6",
+    "@keystonejs/app-static": "^5.1.2",
     "@keystonejs/auth-passport": "^5.1.6",
     "@keystonejs/auth-password": "^5.1.6",
     "@keystonejs/fields": "^9.0.5",
