--- a/projects/cms/package.json
+++ b/projects/cms/package.json
@@ -22,6 +22,7 @@
     "@keystonejs/fields-markdown": "^5.1.9",
     "@keystonejs/keystone": "^8.1.4",
     "@keystonejs/list-plugins": "^5.2.0",
+    "@keystonejs/session": "^6.0.1",
     "connect-mongo": "^3.2.0",
     "cross-env": "^7.0.0",
     "dotenv": "^8.2.0",
