--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "yarn demo todo dev",
     "demo": "manypkg run demo-projects",
     "website": "manypkg run website",
-    "cms": "manypkg run keystone-cms build; manypkg run keystone-cms start",
+    "cms": "manypkg run keystone-cms start",
     "arch-docs": "manypkg run arch/docs",
     "coverage": "cross-env DISABLE_LOGGING=true NODE_ENV=test jest --maxWorkers=1 --coverage",
     "cypress:run": "status=0; yarn workspace @keystonejs/cypress-project-basic run cypress:run || status=$?; yarn workspace @keystonejs/cypress-project-login run cypress:run || status=$?; yarn workspace @keystonejs/cypress-project-twitter-login run cypress:run || status=$?; yarn workspace @keystonejs/cypress-project-access-control run cypress:run || status=$?; yarn workspace @keystonejs/cypress-project-client-validation run cypress:run || status=$?; exit $status",
