--- a/projects/cms/.env.example
+++ b/projects/cms/.env.example
@@ -3,3 +3,4 @@ GROUND_TRUTH_CLIENT_ID=
 GROUND_TRUTH_CLIENT_SECRET=
 MONGO_URL=
 COOKIE_SECRET= # Generate long, unguessable value. Can use openssl rand -hex 32
+BUILD_STAGE= # Used to fix docker error when building with session store
