--- a/projects/cms/package.json
+++ b/projects/cms/package.json
@@ -12,6 +12,7 @@
     "create-tables": "keystone create-tables"
   },
   "dependencies": {
+    "@google-cloud/storage": "^1.6.0",
     "@keystonejs/adapter-mongoose": "^8.0.0",
     "@keystonejs/app-admin-ui": "^5.12.0",
     "@keystonejs/app-graphql": "^5.1.6",
@@ -25,7 +26,9 @@
     "@keystonejs/session": "^6.0.1",
     "connect-mongo": "^3.2.0",
     "cross-env": "^7.0.0",
+    "debug": "^2.2.0",
     "dotenv": "^8.2.0",
+    "keystone-storage-namefunctions": "^1.0.0",
     "passport-oauth2": "^1.5.0",
     "url": "^0.11.0"
   },
