Add GRAPHIQL_ENABLED for production mode, update readme, change BUILD_STAGE variable

--- a/projects/cms/.env.example
+++ b/projects/cms/.env.example
@@ -3,4 +3,5 @@ GROUND_TRUTH_CLIENT_ID=
 GROUND_TRUTH_CLIENT_SECRET=
 MONGO_URL=
 COOKIE_SECRET= # Generate long, unguessable value. Can use openssl rand -hex 32
-BUILD_STAGE= # Used to fix docker error when building with session store
+BUILD_STAGE=FALSE # Used to fix docker error when building with session store
+GRAPHIQL_ENABLED=TRUE # Used to disable graphiql in production mode
